--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ script: python main.py
 deploy:
   provider: releases
   api_key: "263a669607736038e5e3a065c124e7fdfb55bf8f"
+  file_glob: true
   file: *.xml
   skip_cleanup: true
   overwrite: true
